# annotate

./: .gitignore  Cargo.toml  bootstrap.sh  build.rs  build.sh  config.toml  fetch-assets.sh  nohup.out
.github/workflows/: build.yml
buildroot/: Config.in  external.desc  external.mk
buildroot/board/annotator/: grub-efi-builtin.cfg  grub.cfg  linux.config
buildroot/board/annotator/rootfs_overlay/etc/: fstab  inittab
buildroot/board/annotator/rootfs_overlay/etc/X11/xorg.conf.d/: 10-annotator.conf
buildroot/board/annotator/rootfs_overlay/etc/init.d/: S20input
buildroot/board/annotator/rootfs_overlay/root/: .xinitrc
buildroot/configs/: annotator_defconfig
buildroot/package/annotator/: Config.in  annotator.mk
src/: canvas.rs  capture.rs  config.rs  input.rs  main.rs  scene.rs  tools.rs  ui.rs
