[package]
name = "annotator"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2         = { version = "0.37", features = ["ttf"] }
v4l          = "0.14"
jpeg-decoder = "0.3"
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"

[build-dependencies]
ureq    = "2"
tar     = "0.4"
bzip2   = { version = "0.4", features = ["static"] }
zip     = { version = "2", default-features = false, features = ["deflate"] }
